login funzionante, manca tutto il resto

--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="w-full flex justify-center flex-wrap mt-4">
                         <div class="w-[70%] mb-4">
-                            <input type="text" id="username" name="username" maxlength="40" [(ngModel)]="utente" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="USERNAME: ">
+                            <input type="text" id="username" name="username" maxlength="40" [(ngModel)]="email" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="USERNAME: ">
                         </div>
                         <div class="w-[70%] mb-4">
                             <input type="password" id="password" name="password" [(ngModel)]="password" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
