--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -622,6 +622,20 @@
                                 </div>
                             </form>
                         </div>
+                        <div class="border-black border-2 w-full p-4 flex justify-between items-center">
+                            <div class="w-1/4">
+                                <p class="font-bold">Attiva/Disattiva notifiche nuova puntata podcast (attivata)</p>
+                            </div>
+                            <form action="" class="w-3/4 flex flex-nowrap justify-around pl-4">
+                                <div class="w-1/2 flex justify-center flex-wrap items-center">
+                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="attiva" value="attiva" name="notifica" type="radio">Attiva</div>
+                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="disattiva" value="disattiva" name="notifica" type="radio">Disattiva</div>
+                                </div>
+                                <div class="w-1/2 flex justify-end items-center">
+                                    <input type="submit" class="bg-secondary text-white px-4 py-2 h-10 rounded-full" value="Cambia">
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
