--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="modal===true" class="fixed lg:top-1/2 top-[55%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full h-full flex justify-center items-center bg-[#acdeff81]">
+<div *ngIf="token==null && modal===true" class="fixed lg:top-1/2 top-[55%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full h-full flex justify-center items-center bg-[#acdeff81]">
     <div class="w-[80%] lg:h-[80%] h-[85%] bg-gray-100 border-4 border-primary z-40">
         <div class="flex flex-wrap items-center justify-center h-full z-40 mb-4">
             <div class="w-full flex flex-wrap justify-center" *ngIf="registrati === false">
@@ -160,7 +160,10 @@
                 </form>
             </div>
             <div class="h-16 lg:w-[10%] w-1/2 flex md:justify-center justify-end">
-                <button (click)="modal=!modal" class="h-16 lg:w-2/4 w-[50%]">
+                <button *ngIf="token==null" (click)="modal=!modal" class="h-16 lg:w-2/4 w-[50%]">
+                    <img src="./assets/icon/profilo-arancione-3.png" alt="" class="object-contain w-auto">
+                </button>
+                <button *ngIf="token!=null" [routerLink]="['/profilo']" routerLinkActive="router-link-active"  class="h-16 lg:w-2/4 w-[50%]">
                     <img src="./assets/icon/profilo-arancione-3.png" alt="" class="object-contain w-auto">
                 </button>
             </div>
