--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.css
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.css
@@ -1,20 +1,49 @@
-tr{
+tbody tr h3 {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+tbody tr td {
+    background-color: #dcf1ff;
+    padding-bottom: -2px;
+    margin: 0px;
+    border-bottom: 2px solid white;
+}
+
+tbody tr:nth-child(odd) td:first-child {
+    background-color: #acdeff;
+}
+
+tbody tr td:first-child {
+    border-bottom: 2px solid #dcf1ff;
+}
+
+tbody tr:last-child td {
+    border-bottom: 0;
+}
+
+td {
+    height: 3rem !important;
+    max-height: 3rem !important;
     text-align: center;
+    border-right: 2px solid white;
 }
 
-tr:not(:last-child){
-    border-bottom: 5px solid white;
+td:last-child {
+    border: 0;
 }
 
-td{
-    height: 60px;
+td div {
+    height: 2.5rem !important;
+    max-height: 2.5rem !important;
 }
 
-td:first-child{
-    background-color: #ACDEFF; 
+td p {
+    font-size: small;
 }
 
-td:nth-child(2), td:nth-child(3), td:nth-child(4), td:nth-child(5) {
-    background-color: #DCF1FF;
+td:nth-child(2), th:nth-child(2){
+    width: 0;
+    padding: 0;
+    border: 0;
 }
-
