--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -168,23 +168,23 @@
                                     <td class="lg:w-[15%] w-[3%]">
                                         <p class="w-full text-center px-3">{{match?.matchDate}}</p>
                                     </td>
-                                    <td class="lg:w-[10%] w-[3%]">
+                                    <td class="lg:w-[10%] w-[3%] bg-[#dcf1ff]">
                                         <p class="w-full text-center px-3">{{match?.matchTime}}</p>
                                     </td>
-                                    <td class="lg:w-[5%]  w-[2%]">
+                                    <td class="lg:w-[5%]  w-[2%] bg-[#dcf1ff]">
                                         <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code">{{match?.codeHome}}</p>
                                         <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code">{{match?.codeAway}}</p>
                                     </td>
-                                    <td class="lg:w-[10%] w-[2%]">
+                                    <td class="lg:w-[10%] w-[2%] bg-[#dcf1ff]">
                                         <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">W</p>
                                         <p class="w-full text-center px-3" *ngIf="match?.codeHome === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">W</p>
                                         <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">L</p>
                                         <p class="w-full text-center px-3" *ngIf="match?.codeAway === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">L</p>
                                     </td>
-                                    <td class="lg:w-[10%] w-[60%]">
+                                    <td class="lg:w-[10%] w-[60%] bg-[#dcf1ff]">
                                         <p class="w-full text-center">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
                                     </td>
-                                    <td class="lg:w-[50%] w-[30%]">
+                                    <td class="lg:w-[50%] w-[30%] bg-white">
                                         <div class="w-full hidden lg:flex lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
                                         <div class="w-full flex lg:hidden lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1 w-full">TAB</button></div>
                                     </td>
@@ -222,7 +222,6 @@
                                 <div class="lg:w-1/2 w-full">
                                     <p class="w-full h-auto px-4">{{player.lastName}} {{player.firstName}}</p>
                                     <p class="w-full h-auto px-4">N° maglia: {{player.numeroMaglia}}</p>
-                                    <p class="w-full h-auto px-4">Ruolo: {{player.posizione}}</p>
                                 </div>
                             </div>
                             <div class="lg:w-1/3 w-full lg:h-full h-auto lg:border-x-2 lg:border-primary flex justify-center flex-wrap items-center">
@@ -252,7 +251,7 @@
                                 </thead>
                                 <tbody class="">
                                     <tr class="" *ngFor="let singleStats of player.statisticsArray">
-                                        <td class="" *ngFor="let day of singleStats, let j=index">
+                                        <td class="bg-[#dcf1ff] padb m-0 border-b-white border-2" *ngFor="let day of singleStats, let j=index">
                                             <p class="w-28" *ngIf="j==0"></p>
                                             <p *ngIf="j==1" class="w-0"></p>
                                             <p *ngIf="j>1" class="w-20 text-center">{{day[1]}}</p>
