--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.css
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.css
@@ -3,11 +3,15 @@ tbody tr h3 {
     padding-bottom: 0;
 }
 
-tbody tr td {
+/* tbody tr td {
     background-color: #dcf1ff;
     padding-bottom: -2px;
     margin: 0px;
     border-bottom: 2px solid white;
+} */
+
+.padb{
+    padding-bottom: -2px;
 }
 
 tbody tr:nth-child(odd) td:first-child {
