--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="lg:w-[90%] w-full flex justify-center">
-                        <table class="w-full">
+                        <table class="w-full" id="tabella-partite">
                             <thead class="bg-primary text-white lg:w-full w-full">
                                 <tr>
                                     <th class="lg:w-[5%]  w-[3%]">
@@ -163,32 +163,34 @@
                                     </th>
                                 </tr>
                             </thead>
-                            <tbody class="lg:w-full w-full" *ngFor="let match of matchCalendar.totalMatch, let i = index">
-                                <tr *ngIf="i <= cardToShow">
-                                    <td class="lg:w-[15%] w-[3%]">
-                                        <p class="w-full text-center px-3">{{match?.matchDate}}</p>
-                                    </td>
-                                    <td class="lg:w-[10%] w-[3%] bg-[#dcf1ff]">
-                                        <p class="w-full text-center px-3">{{match?.matchTime}}</p>
-                                    </td>
-                                    <td class="lg:w-[5%]  w-[2%] bg-[#dcf1ff]">
-                                        <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code">{{match?.codeHome}}</p>
-                                        <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code">{{match?.codeAway}}</p>
-                                    </td>
-                                    <td class="lg:w-[10%] w-[2%] bg-[#dcf1ff]">
-                                        <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">W</p>
-                                        <p class="w-full text-center px-3" *ngIf="match?.codeHome === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">W</p>
-                                        <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">L</p>
-                                        <p class="w-full text-center px-3" *ngIf="match?.codeAway === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">L</p>
-                                    </td>
-                                    <td class="lg:w-[10%] w-[60%] bg-[#dcf1ff]">
-                                        <p class="w-full text-center">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
-                                    </td>
-                                    <td class="lg:w-[50%] w-[30%] bg-white">
-                                        <div class="w-full hidden lg:flex lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
-                                        <div class="w-full flex lg:hidden lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1 w-full">TAB</button></div>
-                                    </td>
-                                </tr>
+                            <tbody class="lg:w-full w-full">
+                                <ng-container *ngFor="let match of matchCalendar.totalMatch, let i = index">
+                                    <tr *ngIf="i <= cardToShow">
+                                        <td class="lg:w-[15%] w-[3%]">
+                                            <p class="w-full text-center px-3">{{match?.matchDate}}</p>
+                                        </td>
+                                        <td class="lg:w-[10%] w-[3%] bg-[#dcf1ff]">
+                                            <p class="w-full text-center px-3">{{match?.matchTime}}</p>
+                                        </td>
+                                        <td class="lg:w-[5%]  w-[2%] bg-[#dcf1ff]">
+                                            <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code">{{match?.codeHome}}</p>
+                                            <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code">{{match?.codeAway}}</p>
+                                        </td>
+                                        <td class="lg:w-[10%] w-[2%] bg-[#dcf1ff]">
+                                            <p class="w-full text-center px-3" *ngIf="match?.codeHome !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">W</p>
+                                            <p class="w-full text-center px-3" *ngIf="match?.codeHome === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">W</p>
+                                            <p class="w-full text-center px-3" *ngIf="match?.codeAway !== teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamAway > match!.scoreTeamHome)">L</p>
+                                            <p class="w-full text-center px-3" *ngIf="match?.codeAway === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">L</p>
+                                        </td>
+                                        <td class="lg:w-[10%] w-[60%] bg-[#dcf1ff]">
+                                            <p class="w-full text-center">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
+                                        </td>
+                                        <td class="lg:w-[50%] w-[30%] bg-white">
+                                            <div class="w-full hidden lg:flex lg:justify-end lg:mx-0" ><button [routerLink]="['/tabellino',match?.gameid]" class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
+                                            <div class="w-full flex lg:hidden lg:justify-end lg:mx-0" ><button [routerLink]="['/tabellino',match?.gameid]" class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1 w-full">TAB</button></div>
+                                        </td>
+                                    </tr>
+                                </ng-container>
                             </tbody>
                         </table>
                     </div>
@@ -239,7 +241,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="table-container w-full overflow-x-scroll">
+                        <div id="tabella-giocatore" class="table-container w-full overflow-x-scroll">
                             <table class="w-full">
                                 <thead class="bg-primary text-white">
                                     <tr class="w-full">
