--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.css
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.css
@@ -1,53 +1,59 @@
-tbody tr h3 {
+#tabella-giocatore tbody tr h3 {
     padding-top: 0;
     padding-bottom: 0;
 }
 
-/* tbody tr td {
+#tabella-giocatore tbody tr td {
     background-color: #dcf1ff;
     padding-bottom: -2px;
     margin: 0px;
     border-bottom: 2px solid white;
-} */
-
-.padb{
-    padding-bottom: -2px;
 }
 
-tbody tr:nth-child(odd) td:first-child {
+#tabella-giocatore tbody tr:nth-child(odd) td:first-child {
     background-color: #acdeff;
 }
 
-tbody tr td:first-child {
+#tabella-giocatore tbody tr td:first-child {
     border-bottom: 2px solid #dcf1ff;
 }
 
-tbody tr:last-child td {
+#tabella-giocatore tbody tr:last-child td {
     border-bottom: 0;
 }
 
-td {
+#tabella-giocatore td {
     height: 3rem !important;
     max-height: 3rem !important;
     text-align: center;
     border-right: 2px solid white;
 }
 
-td:last-child {
+#tabella-giocatore td:last-child {
     border: 0;
 }
 
-td div {
+#tabella-giocatore td div {
     height: 2.5rem !important;
     max-height: 2.5rem !important;
 }
 
-td p {
+#tabella-giocatore td p {
     font-size: small;
 }
 
-td:nth-child(2), th:nth-child(2){
+#tabella-giocatore td:nth-child(2),#tabella-giocatore th:nth-child(2){
     width: 0;
     padding: 0;
     border: 0;
+}
+
+#tabella-partite tbody tr:nth-child(odd) td:first-child {
+    background-color: #acdeff;
+}
+#tabella-partite tbody tr:nth-child(even) td:first-child {
+    background-color: #DCF1FF;
+}
+#tabella-partite tbody tr td {
+    border-bottom: 2px solid white;
 }
