--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -215,7 +215,7 @@
                         </div>
                         <div class="w-1/2 h-28 text-white flex flex-wrap justify-center items-center bg-primary"></div>
                     </div>
-                    <div class="mt-5 w-[90%] flex flex-wrap" *ngFor="let player of teamsPlayer">
+                    <div class="mt-5 mb-10 w-[90%] flex flex-wrap " *ngFor="let player of teamsPlayer">
                         <div class="w-full h-auto flex lg:flex-nowrap flex-wrap justify-between items-center">
                             <div class="lg:w-1/3 w-full lg:h-full h-auto flex justify-center flex-wrap items-center">
                                 <div class="lg:w-1/2 w-full flex justify-center lg:justify-start">
@@ -235,27 +235,25 @@
                                 </div>
                             </div>
                             <div class="lg:w-1/3 w-full lg:h-full h-auto flex justify-center flex-wrap items-center">
-                                <p class="w-full h-auto text-justify px-4"><b>{{player.lastName}} {{player.firstName}}</b> ha inizio a giocare a basket fin da ragazzino. Crescendo ha frequentato il college
+                                <p class="w-full h-auto text-justify px-4 py-2"><b>{{player.lastName}} {{player.firstName}}</b> ha inizio a giocare a basket fin da ragazzino. Crescendo ha frequentato il college
                                     al <b>{{player.college}}</b> facendosi le ossa per poi approdare nel mondo dell'NBA nell' anno <b>{{player.nbaStart}}</b>. In questi anni ha totalizzato
                                     <b>{{player.points}} punti</b> con <b>{{player.assists}} assist</b>
                                 </p>
                             </div>
                         </div>
+                        <h3 class="w-full text-center font-bold text-xl p-2">Ultime 5 gare</h3>
                         <div id="tabella-giocatore" class="table-container w-full overflow-x-scroll">
                             <table class="w-full">
                                 <thead class="bg-primary text-white">
                                     <tr class="w-full">
                                         <th class="" *ngFor="let day of player.statisticsArray[0], let j=index">
-                                            <p class="w-28" *ngIf="j==0">Ultimi 5 gare</p>
                                             <p *ngIf="j>1" class="w-20 text-center">{{day[0]}}</p>
                                         </th>
                                     </tr>
                                 </thead>
                                 <tbody class="">
                                     <tr class="" *ngFor="let singleStats of player.statisticsArray">
-                                        <td class="bg-[#dcf1ff] padb m-0 border-b-white border-2" *ngFor="let day of singleStats, let j=index">
-                                            <p class="w-28" *ngIf="j==0"></p>
-                                            <p *ngIf="j==1" class="w-0"></p>
+                                        <td class="" *ngFor="let day of singleStats, let j=index">
                                             <p *ngIf="j>1" class="w-20 text-center">{{day[1]}}</p>
                                         </td>
                                     </tr>
