--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -80,11 +80,11 @@
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Central">
                                         <div class="w-1/3 flex justify-center">
-                                            <img class="object-contain h-full" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
+                                            <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                            <p class="w-full">🖤</p>
+                                            <p class="w-auto hover:cursor-pointer" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
+                                            <p class="w-[10%] hover:cursor-pointer">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -110,11 +110,11 @@
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SouthWest">
                                         <div class="w-1/3 flex justify-center">
-                                            <img class="object-contain h-full" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
+                                            <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                            <p class="w-full">🖤</p>
+                                            <p class="w-auto hover:cursor-pointer" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
+                                            <p class="w-[10%] hover:cursor-pointer">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -130,11 +130,11 @@
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.NorthWest">
                                         <div class="w-1/3 flex justify-center">
-                                            <img class="object-contain h-full" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
+                                            <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                            <p class="w-full">🖤</p>
+                                            <p class="w-auto hover:cursor-pointer" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
+                                            <p class="w-[10%] hover:cursor-pointer">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -150,11 +150,11 @@
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Pacific">
                                         <div class="w-1/3 flex justify-center">
-                                            <img class="object-contain h-full" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
+                                            <img class="object-contain h-full hover:cursor-pointer" src={{team.logo}} alt="" [routerLink]="['/squadraDetail', team.id]"/>
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
-                                            <p class="w-full">🖤</p>
+                                            <p class="w-auto hover:cursor-pointer" [routerLink]="['/squadraDetail', team.id]">{{team.teamName}}</p>
+                                            <p class="w-[10%] hover:cursor-pointer">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
