corretto bug notturni

--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -76,7 +76,7 @@
                             </div>
                             <div class="w-auto lg:hidden flex items-center ml-4">
                                 <div class="flex items-center w-full border-primary border-4">
-                                    <select id="select" class="border p-2" [(ngModel)]="selectedOption" (change)="onSelectionChange()">
+                                    <select id="select" class="border p-2" [(ngModel)]="selectedOption">
                                         <option value="maschio">M</option>
                                         <option value="femmina">F</option>
                                         <option value="altro">Altro</option>
