--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -159,16 +159,16 @@
                     </div>
                 </div>
                 <div class="w-full" *ngIf="matchToday.length==0">
-                    <p class="w-full text-center font-bold text-2xl">Neesuna partita in programma!</p>
+                    <p class="w-full text-center font-bold text-2xl">Nessuna partita in programma!</p>
                 </div>
-                <div class="w-full h-auto mb-10 flex justify-center items-center mt-5" *ngIf="matchToday.length!=0">
+                <!-- <div class="w-full h-auto mb-10 flex justify-center items-center mt-5" *ngIf="matchToday.length!=0">
                     <button *ngIf="cardToShow==3" class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" (click)="changeCardToShow(cardToShow)">
                         Scopri di più
                     </button>
                     <button *ngIf="cardToShow>=4" class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" (click)="changeCardToShow(cardToShow)">
                         Scopri di meno
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
